--- a/covid-center/css/style.css
+++ b/covid-center/css/style.css
@@ -2,8 +2,8 @@ body {
     background-color: #f2f2f2;
     font-family: 'Nunito Sans', sans-serif;
 }
-ul {
-    margin-left: 0; 
+ul, ol {
+    margin-left: 10px; 
     padding-left: 0;
    }
 h1 {
