--- a/covid-center/css/style.css
+++ b/covid-center/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 ul, ol {
     margin-left: 10px; 
-    padding-left: 0;
+    padding-left: 10px;
    }
 h1 {
     text-align: left
@@ -12,6 +12,11 @@ h1 {
 h2{
     font-size: 19px;
     font-weight: 600
+}
+h3{
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 10px;
 }
 form{
   margin-right: 20px;
@@ -24,6 +29,23 @@ form textarea{
     width: 100%;
     margin: 10px 0px 20px 0;
 }
+
+.dropdown-item{
+    padding-bottom: 20px;
+    background-color: #ffffff;
+}
+
+.dropdown-item:hover{
+    border: solid 1px #4a4a4a;
+    background-color: #cecece;
+    color: #1a1a1a;
+}
+
+.dropdown-item h3{
+    padding: 0;
+
+}
+
 #submit{
    width: 100%;
     border-radius: 5px;
@@ -51,10 +73,11 @@ form textarea{
     align-items: center;
     margin:5px auto;
     border-radius: 1px;
-    border: solid 1px #4a4a4a;
+    border: solid 1px #cecece;
     width: 700px;
     height: 40px;
     font-size: 16px;
+    padding-left: 5px;
 }
 .text {
     display: none;
